// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseMarkdown does not render block level elements when type=caption. 1`] = `
[
  <p>
    ### Header
 
    <strong>
      bold
    </strong>
     

    <em>
      italic
    </em>
     
\`code\` 

    <sup>
      sup
    </sup>
     

    <sub>
      sub
    </sub>
     
Normal list: 
* One 
* Two 
* Three 
Ordered list: 
1. 1 
2. 2 
3. 3
  </p>,
  "
",
]
`;

exports[`parseMarkdown renders body correctly. 1`] = `
[
  <h3>
    Header
  </h3>,
  "
",
  <p>
    <strong>
      bold
    </strong>
    <br />
    

    <em>
      italic
    </em>
    <br />
    

    <code>
      code
    </code>
    <br />
    

    <sup>
      sup
    </sup>
    <br />
    

    <sub>
      sub
    </sub>
    <br />
    
Normal list:
  </p>,
  "
",
  <ul>
    

    <li>
      One
    </li>
    

    <li>
      Two
    </li>
    

    <li>
      Three
      <br />
      
Ordered list:
    </li>
    

  </ul>,
  "
",
  <ol>
    

    <li>
      1
    </li>
    

    <li>
      2
    </li>
    

    <li>
      3
    </li>
    

  </ol>,
  "
",
]
`;
